src/test/run-pass/fn-type-infer.rs
fn main() {
    // We should be able to type infer inside of lambdas.
    let f = fn () { let i = 10; };
}
