src/test/compile-fail/occurs-check.rs
fn main() {
    let f; //! ERROR this local variable has a type of infinite size
    f = @f;
}
